--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^5.7.1",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.30.3",
     "react-tsparticles": "^1.42.2",
-    "swiper": "^11.2.4",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.5",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
